--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.primefaces-7.0.jar=lib/primefaces-7.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -48,7 +47,7 @@ jar.compress=false
 javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${libs.javaee-api-7.0.classpath}:\
-    ${file.reference.primefaces-7.0.jar}
+    ${libs.primefaces.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
